styles/style.css
/* Font import */

@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');

.inter-inter {
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
    font-weight: 800;
    font-style: normal;
    font-variation-settings:
      "slnt" 0;
  }

  @import url('https://fonts.googleapis.com/css2?family=Playwrite+BE+VLG:wght@100..400&display=swap');

  /* Share Style */
  *{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
  body{
    background: rgb(0, 0, 0);
    font-family: "Inter", sans-serif;
    font-weight: 600;
  }
section{
    width: 80%;
    /* background-color: rgb(156, 161, 161); */
    margin: 0 auto;
}
h1{
    font-size: 35px;
    line-height: normal;
    color: rgb(255, 255, 255);
}
h2{
    font-size: 25px;
    line-height: normal;
    color: rgb(255, 255, 255);
}
h3{
    font-size: 17px;
    line-height: normal;
    color: rgb(255, 255, 255);
}
p{
    font-size: 14px;
    line-height: normal;
    color: rgba(255, 255, 255, 0.5);
}
a{
    line-height: normal;
    color: rgba(255, 255, 255, 0.5);
    text-decoration: none;
    font-size: 18px;
    font-weight: 400;
}
.btn-primary{
    background-color:  rgb(230, 83, 60);
    border: none ;
    color: white;
    padding: 15px 40px;
    font-size: 18px;
    border-radius: 40px;
    font-weight: 700;
}
span{
    font-family: "Playwrite BE VLG", cursive;
}
/* Header Style-@anirban3365 */
.header{
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 30px auto;
}
.brand{
    font-weight: 700;
    font-style: italic;
    color: rgb(230, 83, 60);
}
.nav-list ul li{
    list-style: none;
    display: flex;
    gap: 40px; 
}
.nav-list a{
    padding: 8px 20px ;
    border-radius:40px;
}
.ahome{
    background-color:rgb(230, 83, 60); 
    color: white;
    font-weight: 700;
}
.menu{
    display: none;
}
.menu i{
    color: white;
    font-size: 1.5rem;
}

/* Banner Style-@anirban3365 */
.baner{
    display: flex;
    justify-content: space-between;
    margin-top: -2%;
    
}

.description{

    width: 40%;
}
.description h1{
    font-size: 60px;
    font-weight: 800;
    margin-top: 20%;
    margin-bottom: 10%;
}
.description p{
    margin-bottom: 10%;
}

.picture{
  
}
.picture img{
    width: 100%;
}
.btn{
    display: flex;
    justify-content: space-between;

}
#dwon{
    border: 1px solid rgb(255, 255, 255);
    background-color: transparent;
}
.tutorial{
    backdrop-filter: blur(20px);
    position: absolute;
    left: 50%;
    top: 80%;
    display: flex;
    align-items: center;
    border: 1px solid rgba(255, 255, 255, 0.1);
    border-radius: 12px;
    padding: 10px;
    justify-content: space-around;
    gap: 7px;
}
.red-carcle{
    background-color:rgb(230, 83, 60);  
    width: 40px;
    height: 40px;
    border-radius: 50%;
}
.tutorial-text h1{
    font-size: 25px;
}
.tutorial-text2 h1{
    font-weight: 800;
}
.free-video{
    position: absolute;
    border: 1px solid rgba(255, 255, 255, 0.1);
    border-radius: 12px;
    backdrop-filter: blur(20px);
    background-color: rgba(255, 255, 255, 0.1);
    padding: 10px;
    left: 80%;
    top: 35%;
}

/* Change Habit style-anirban3365 */
.change-description{
    width: 50%;
    margin: 0 auto;
    text-align: center;
}
.change-cart{
    display: grid;
    grid-template-columns: repeat(4,1fr);
    gap: 5%;
    margin: 50px 0px;
  
}
.cart-box1 ,.cart-box2,.cart-box3,.cart-box4{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
}
.cart-box1 h3 ,.cart-box2 h3,.cart-box3 h3,.cart-box4 h3{
    margin-bottom: 7px;
}
.cart-box1 img,.cart-box2 img,.cart-box3 img,.cart-box4 img{
    border-radius: 50%;
    margin-bottom: 20px;
}
/* Run section style */
.run-extra{
    display: flex;
    background-color: rgb(34, 34, 34);
    justify-content: space-between;
    padding: 5%;
    margin-top: 100px;
    margin-bottom: 50px;
    border-radius: 18px;
}
.run-picture{
    width: 35%;
    height: 20%;

}
.run-description{
    width: 35%;
}
.run-picture img{
    width: 100%;
    border-radius: 20px;  
    height: 300px;
}

.run-description h1{
    font-size: 50px;
    font-weight: 800;
    margin-bottom: 10px;
}
.run-description P{
    margin-bottom: 15px;
}
#join{
    padding: 15px 80px;
    margin-top: 10%;
}

/* team Section style-@anirban3365 */
.meet-team{
    display: grid;
    grid-template-columns: repeat(3,1fr);
    gap: 3% 2%;
    position: relative;
  
   
}
.team-person{
    width: 100%;
    object-fit: cover;


}
.team-person img{
    width: 100%;
    object-fit: cover;
    object-position: center;
    height: 20rem;
    border-radius: 15px;
}
.t1-name {
    position: absolute;
    left: 2%;
    top:38%;
}
.t2-name{
    position: absolute;
    left: 36%;
    top:38%;
}
.t3-name{
    position: absolute;
    left: 70%;
    top:38%;
}
.t4-name{
    position: absolute;
    left: 2%;
    top: 93%;
}
.t5-name{
    position: absolute;
    left: 36%;
    top: 93%;
}
.t6-name{
    position: absolute;
    left: 70%;
    top: 93%;
}

.des{
    width: 40%;
    margin: 78px auto;
    text-align: center;
}
.des h1{
    margin-bottom: 20px;


}
/* Bmi-style-@anirban3365 */


.bmi-cal{
    width: 100%;
    background-color: rgb(34, 34, 34);
}
.bmi-dis{
    width: 50%;
    margin: 5rem auto;
}
.bmi-dis h1{
    margin-bottom: 1.3rem;

}
.cal{
    display: flex;
    justify-content: space-between;
    margin-top: 7rem;
    width: 80%;
    margin: 0 auto;
    padding: 2rem 0rem;
}
.cal-chart {
    width: 35%;
}

table{
    width:100%;
    border: 1px solid rgba(255, 255, 255, 0.1);
    border-collapse: collapse;
}
.theader{
    font-size: 1.3rem;
    color: white;
}
td{
  border: 1px solid rgba(255, 255, 255, 0.1);
  color: rgba(255, 255, 255, 0.5);
  height: 50px;
  font-size: 1rem;
  padding-left: 2rem;
  font-weight: 400;
}

.cal-input{
    width:55%;
}
.binput{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 10% 3%;
    grid-row: auto;
   
}
input ,select{
    height: 2.5rem;
    border-radius: 8px;
    width:100%;
    border: none;
    font-size:1rem;
    background: rgba(255, 255, 255, 0.1);
  
}
select {
    color: rgba(255, 255, 255, 0.3);
    font-weight: 200;
}
.full-box{
    width: 206%;
}

.input-des h2{
    margin-bottom: 2rem;
}
.input-des p{
    margin-bottom: 2rem;
}
.calculate{
    margin-top: 2.5rem;
    cursor: pointer;
}
#cal-btn{
    width: 15rem;
}


/* My section-style-@anirban3365 */
.review-des{
    width: 40%;
    text-align: center;
    margin:5rem auto;
}
.riview{
    display: grid;
    grid-template-columns: repeat(3,1fr);
    gap: 3rem;

}
.review-cart{
    width:80%;
    background-color:rgba(255, 255, 255, 0.1);;
    border: 2px solid blueviolet;
    border-radius: 18px;
    height: 100%;
    transition: all .5s;
}
.review-cart p{
    color:  rgb(0, 0, 0);
    margin-top: 2rem;
    text-align: center;
}
.review-cart img{
    width: 100%;
    border-radius: 50%;
    border: 3px solid white;
}
.review-cart h3{
    text-align: center;
}
.review-cart:hover{
    background-color: rgb(181, 240, 240);
    height: 110%;
    transform: scale(1.1);
}

/* footer Section style */
.footer{
    margin-top: 7rem;
    background-color: rgb(32, 32, 32);
    display: grid;
    grid-template-columns: repeat(3,1fr);
    gap:5rem;
    background-color: black;
    padding-bottom: 5rem;
    border-bottom: 2px solid rgba(255, 255, 255, 0.1);

}
.foot-box{
    width: 25rem;

}
.foot-box h3,h1{
    margin: 2rem 0;
}
.foot-box  p{
    padding: .5rem 0;
}
.copy-right{
    padding: 2rem;
    text-align: center;
    
}
.copy-right h3{
    color: rgba(255, 255, 255, 0.5);
}


/*  Small Divice  max width-576 */
@media screen and (max-width:576px) {
    .nav-list{
        display: none;
    }
    section{
        width: 90%;
    }
    .menu{
        display: flex;
      
    }
    .brand{
        font-size: 20;
    }
    .description h1{
        font-size: 2rem;
        line-height: 2rem;
        margin-bottom: 18px;
    }
    .baner{
        flex-direction: column;
        position: relative;
        margin-top: -10%;
    }
    .description{
        width: 70%;
        margin-top:2%;
        margin-bottom: 5%;
    }
    .tutorial{
        left: 0%;
        top: 70%;
        padding: 10px;
        position: absolute;
    }
    .free-video{
        left: 55%;
        top: 45%;
        padding: 15px;
        position: absolute;
        
    }
    .tutorial-text h1 , .tutorial-text2 h1{
        font-size: 1rem;
    }
    .tutorial-text p ,.tutorial-text2 p{
        font-size: .5rem;
    }
    .foot-box h3, h1 {
        margin: 0rem 0;
    }
    .btn{
        width: 150%;
        justify-content: space-around;
        margin: 0 auto;
        
    }
    .btn-primary{
        padding: 15px 40px;
        font-size: .6rem;
    }
    .change-description{
        width: 90%;
    }
    .change-description h1{
        font-size: 1.5rem;
        line-height: 2;
    }
    .change-description p{
        font-size: .7rem;
    }
    .change-cart{
        display: grid;
        grid-template-columns: repeat(1,1fr);
        gap: 2%;
        margin: 50px 0px;
    }
    .cart-box1 p ,.cart-box2 p,.cart-box3 p,.cart-box4 p{
        font-size: .7rem;
    }
    .cart-box1, .cart-box2, .cart-box3, .cart-box4 {
        width: 50%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        text-align: center;
        margin: 5px auto;
    }
    .footer{
        grid-template-columns: repeat(1,1fr);
        padding-bottom: 1rem;
        gap:1rem;
    }
    .foot-box h3,h1{
        margin: 0rem 0;
    }
    .foot-box{
        width: 100%;
    
    }
    .copy-right h3{
        font-size: .8rem;
    }
    .run-extra{
        flex-direction: column;
        gap: 2rem;
    }
    .run-picture{
        width: 100%;
    
    }
    .run-description{
        width: 100%;
    }
    .run-description h1{
        font-size: 1.5rem;
        font-weight: 700;
        margin-bottom: 5px;
    }
    .run-description P{
        margin-bottom: 1rem;
    }
    #join{
        padding: 15px 70px;
        margin-top: 5%;
    }
    .bmi-dis{
        width: 90%;
        margin: 1rem auto;
    }
    .bmi-dis h1{
        font-size: 1.5rem;
    }
    .bmi-dis p{
        font-size: .8rem;
    }
    .cal{
        flex-direction: column;
        gap: 2rem;
    }
    .cal-chart ,.cal-input{
        width: 100%;
    }
    .cal-chart h2{
        font-size: 1.5rem;
    }
    .des{
        width: 90%;
        margin: 1rem auto;
    }
    .des h1{
        font-size: 1.5rem;
    }
    .des p{
        font-size: .8rem;
    }
    
    .meet-team{
        grid-template-columns: repeat(1,1fr);
        gap: 1% 2%;
        position: relative;
    }
    .t1-name {
        position: absolute;
        left: 10%;
        top: 13%;
    }
    .t2-name {
        position: absolute;
        left: 10%;
        top: 31%;
    }
    .t3-name {
        position: absolute;
        left: 10%;
        top: 48%;
    }
    .t4-name {
        position: absolute;
        left: 10%;
        top: 66%;
    }
    .t5-name {
        position: absolute;
        left: 10%;
        top: 84%;
    }
    .t6-name {
        position: absolute;
        left: 10%;
        top: 101%;
    }
    .review-des{
        width: 90%;
        margin-top: 8rem;
    }
    .review-des h1{
        font-size: 1.5rem;
    }
    .review-des p{
        font-size: .7rem;
    }
    .riview{
        grid-template-columns: repeat(1,1fr);
        gap: 3rem;
    }
    .review-cart{
        width: 95%;
        margin: 0 auto;
    }   

}

